# bptimer

./: .gitignore  .prettierignore  README.md  docker-compose.yml  go.mod  package.json  turbo.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  debug-desktop.yml  publish-npm.yml  release-desktop.yml
apps/desktop/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  installer.iss  package.json
apps/desktop/reference/: pb_complete.proto
apps/desktop/src/: config.rs  hotkeys.rs  main.rs  pb.proto  updater.rs
apps/desktop/src/api/: bptimer.rs  mod.rs  pocketbase.rs
apps/desktop/src/capture/: mod.rs  packet.rs  parser.rs  tcp.rs
apps/desktop/src/models/: combat.rs  events.rs  mob.rs  mod.rs  player.rs  radar.rs
apps/desktop/src/protocol/: constants.rs  mod.rs  pb.rs
apps/desktop/src/stats/: calculator.rs  mod.rs  processor.rs
apps/desktop/src/ui/: app.rs  constants.rs  mod.rs
apps/desktop/src/ui/components/: class_icons.rs  dps_graph.rs  mod.rs  player_table.rs  title_bar.rs
apps/desktop/src/ui/views/: combat_view.rs  main_view.rs  mob_view.rs  mod.rs  radar_view.rs  settings_view.rs
apps/desktop/src/utils/: constants.rs  formatting.rs  mod.rs  modules.rs
apps/pocketbase/: .dockerignore  .gitignore  Dockerfile  boss-meter-ids.json  fly.toml  go.mod  go.sum  main.go  package.json  pb-docs.md
apps/pocketbase/pb_go/: cache.go  constants.go  crons.go  hp_reports.go  realtime.go  types.go  version_check.go  votes.go
apps/pocketbase/pb_hooks/: api-key-auth.pb.js  cleanup-hp-report.pb.js  cleanup-hp-reports.pb.js  cleanup-mob-channel-status.pb.js  cleanup-mob-reset-events.pb.js  cleanup-page-presence.pb.js  compression.pb.js  constants.js  create-hp-report.pb.js  create-mob-channel-status.pb.js  manage-votes.pb.js  prevent-duplicate-hp-reports.pb.js  rate-limit-bad-actors.pb.js  reset-mob-channel-status.pb.js  update-mob-channel-status.pb.js  vote-utils.js
apps/pocketbase/pb_migrations/: 1761171683_initial_setup.js  1761171684_create_collections.js  1761171685_seed_data.js  1766012777_updated_mob_channel_status.js  1766012808_updated_mob_channel_status.js  1766012842_updated_hp_reports.js  1766013070_updated_hp_reports.js  1766013096_updated_mob_channel_status.js  1766013178_updated_maps.js  1766013179_add_na_region_to_existing.js  (+1 more)
apps/web/: .env.example  .gitignore  _headers  eslint.config.ts  package.json  svelte.config.ts  vite.config.ts  wrangler.toml
scripts/: check-go-format.js  clear-test-data.mjs  create-hp-report.mjs  test-batching.mjs
(+187 files in other folders)
