[package]
name = "bptimer-desktop"
version = "0.1.9"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
bytes = "1.11.1"
chrono = "0.4.43"
dirs = "6.0.0"
dotenvy = "0.15"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
egui_extras = "0.33.3"
egui_material_icons = "0.5.0"
egui_plot = "0.34"
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
etherparse = "0.19"
eventsource-stream = "0.2.3"
flate2 = "1.1"
futures = "0.3.31"
global-hotkey = "0.7"
image = { version = "0.25.9", features = ["webp"] }
instant = "0.1.13"
log = "0.4"
netdev = "0.40.0"
open = "5.3"
pcap = { version = "2.4.0", features = ["capture-stream"] }
prost = "0.14.3"
reqwest = { version = "0.13.1", features = ["json", "stream", "rustls", "blocking"], default-features = false }
self_update = "0.42.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Recovery"] }
zstd = "0.13.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[build-dependencies]
prost-build = "0.14.3"  # protobuf code generation
winres = "0.1.12"
